main/default/objects/Batch_Processor__c/Batch_Processor__c.object-meta.xml
<CustomObject>
    <description>Temp table that stores Record Ids to be processed by Compass Batch class</description>
    <label>Batch Processor</label>
    <nameField>
        <displayFormat>BP{000000}</displayFormat>
        <label>Batch Processor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>