main/default/objects/Batch_Processor__c/fields/Parameter_1__c.field-meta.xml
<CustomField>
    <fullName>Parameter_1__c</fullName>
    <label>Parameter 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>