main/default/objects/Batch_Processor__c/fields/Record_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_2__c</fullName>
    <label>Record Id 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>