main/default/objects/Batch_Processor__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Record Id</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>