main/default/objects/Batch_Processor__c/fields/Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source__c</fullName>
    <label>Trigger Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>