main/default/objects/Batch_Processor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Batch Type</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>