main/default/objects/Batch_Processor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trigger_Source__c</columns>
    <columns>Type__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Record_Id_2__c</columns>
    <columns>Parameter_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>